Sat Feb  5 23:32:54 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* enc/encdb.c (InitVM_encdb): MVM ready.

Sat Feb  5 22:44:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c: support for ruby floats; they are fairly flat, having
	  no pointers inside.  So a simple memory copy (rather than a
	  complex of Marshal.dump) should suffice with much sppedup.

Thu Feb  3 19:16:35 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_send): Sends unacceptable objects
	  anyway, by marshaling them.  Marshal output strings are
	  distinguishable by missued FL_MARK.

	* intervm.c (wormhole_sendable_p): Objects with instance variables
	  are hereby recognized as unacceptable; making them reroute via
	  marshaling.

	* intervm.c (wormhole_push): Fixing embarrassing in wormhole's
	  queue arrangement

	* intervm.c (wormhole_shift): ditto.

Tue Feb  1 15:31:46 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* README: update.

Tue Feb  1 15:15:58 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/drb/mvm.rb (RubyVM::self.parse_uri): Now uses drb+mvm://

Wed Jan 19 05:50:18 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/drb/mvm.rb: New file.  It wraps MVM's communication channel
	  to provide you a inter-VM procedure call mechanism.

Wed Jan 19 05:45:38 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_recv): wormhole_shift blocks, so
	  it should release the interpreter lock.  RUBY_UBF_IO is arguable
	  though there is no chance to interrupt the operation anyway
	  because the lock is done using mutex.

Wed Jan 19 01:55:01 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_create): RubyVM#send argumenst are visible as
	  RubyVM::ARGV from inside of a called VM.

Wed Jan 19 01:44:00 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (wormhole_interpret_this_obj): Bug fix.  rb_ary_new2()
	  do not set its length so we should not directly assign, just use