@@ -14,5 +14,10 @@ void rb_declare_transcoder(const char *enc1, const char *enc2, const char *lib);
 void
 Init_transdb(void)
 {
+}
+
+void
+InitVM_transdb(void)
+{
 #include "transdb.h"
 }
